--- a/public/index.css
+++ b/public/index.css
@@ -62,6 +62,7 @@ body {
 .logo {
   width: 150px;
   height: 150px;
+  color: white;
 }
 
 .logo-wrapper .text {
@@ -71,6 +72,9 @@ body {
 
 .logo-wrapper h1 {
   color: white;
+  font-size: 50px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 
 footer {
@@ -100,7 +104,6 @@ footer a:hover {
 }
 
 .desc p {
-  width: 560px;
   color: rgba(253, 253, 253, 0.514);
 }
 
@@ -115,6 +118,7 @@ footer a:hover {
   outline: none;
   width: 350px;
   margin-top: 5px;
+  text-align: center;
   border-radius: 50px;
   color: #fff;
   transition: border-radius 0.1s;
@@ -122,7 +126,6 @@ footer a:hover {
 
 #uv-address:focus {
   border: 1px solid rgba(253, 253, 253, 0.514);
-  border-radius: 6px;
 }
 
 .credit {
